feat: added blocks count per day to pool stats response
