# api/swagger.yaml
@@ -1137,6 +1137,7 @@ components:
         - workers_count
         - hashrate
         - avg_hashrate
+        - blocks_count_24h
       properties:
         miners_count:
           format: uint32
@@ -1148,6 +1149,9 @@ components:
           type: string
         avg_hashrate:
           type: string
+        blocks_count_24h:
+          format: uint32
+          type: integer
     PoolSlave:
       type: object
       required:
